# coddfy

./: .env.docker.example  .gitignore  CORS_CONFIG.md  DEPLOY.md  DOCUMENTACAO.md  Dockerfile.backend  Dockerfile.frontend  ENV_VARIABLES.md  PRD.md  README.md  SEED_FIXES.md  docker-compose.yml  prd.md  pyproject.toml  render.yaml  run_backend.py  setup.py  setup.sh  start.sh  stop.sh  validate.sh
.cursor/rules/: rulesgeneral.mdc
.github/workflows/: ci-cd.yml
alembic/: env.py  script.py.mako
alembic/versions/: __init__.py
backend/: FRONTEND_API_CONTRACT.json  __init__.py  __main__.py  alembic.ini  app.py  auth.py  auth_helpers.py  build.sh  config.py  database.py  development.ini  logging.py  logging_config.py  models.py  openapi.yaml  production.ini  pshell.py  routes.py  run_backend.py  schemas.py  setup.py  storage.py
backend/alembic/: env.py
backend/scripts/: create_admin.py  seed_all.py  seed_data.py  seed_installments.py  seed_partners.py
backend/views/: __init__.py  api_docs.py  auth.py  clients.py  consultants.py  contracts.py  dashboard.py  docs.py  export.py  feedbacks.py  health.py  (+4 more)
frontend/: index.html  package-lock.json  package.json
scripts/: BACKEND_README_TEMPLATE.md  FRONTEND_README_TEMPLATE.md  __init__.py  create_admin.py  dbeaver-connect.ps1  fix-dbeaver.ps1  repair-db.ps1  repair-postgres-port.ps1  reset-postgres-password.ps1  seed-docker.ps1  seed-docker.sh  seed_data.py  seed_installments.py  seed_partners.py  show-postgres-credentials.ps1  split_all.sh  split_backend.sh  split_frontend.sh  windows-doctor.ps1
terraform/: main.tf
(+17 files in other folders)
